# deep-learning-ime

./: .gitignore  README.md  build_corpus.py  config.py  data_load.py  eval.py  hyperparams.py  main.py  model.py  modules.py  prepro.py  pyproject.toml  train.py
models/: gru.py  rnn.py
models/labeling/: cbhg.py  gru.py  lstm.py  rnn.py
utils/: corpus.py  time.py  vocabulary.py
